--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,17 @@
 [package]
 name = "rust_nes_emulator"
 version = "0.1.0"
+authors = ["a.zausalin <alexeyzausalin@gmail.com>"]
 edition = "2021"
+path = "src/lib.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+name = "rust_nes_emulator"
+path = "src/lib.rs"
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
 
 [dependencies]
