--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ pretty_assertions = "0.6.1"
 [dependencies]
 bitflags = "1.3.2"
 lazy_static = "1.4.0"
+enum-display-derive = "0.1.1"
 
 [workspace]
 members = [
-    "snake"
+    "snake",
+    "trace",
 ]
